# textAnalyze

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: compilerSetup.txt
dependencies/googletest/: CMakeLists.txt
dependencies/threadPool/: CMakeLists.txt
dependencies/threadPool/include/: ThreadPool.h
lib/ai/: CMakeLists.txt
lib/ai/include/: ChatGPTClient.h
lib/ai/source/: ChatGPTClient.cpp
lib/gui/: CMakeLists.txt
lib/gui/include/: AnalysisResultDialog.h  MainWindow.h  PerformanceChartDialog.h
lib/gui/resources/: style.qss
lib/gui/source/: AnalysisResultDialog.cpp  AnalysisResultDialog.ui  MainWindow.cpp  MainWindow.ui  PerformanceChartDialog.cpp  PerformanceChartDialog.ui
lib/main/: CMakeLists.txt
lib/main/include/: Program.h
lib/main/source/: main.cpp
lib/textAnalyzer/: CMakeLists.txt
lib/textAnalyzer/include/: IStatisticModule.h  MetricCollector.h  Modules.h  TextAnalyzer.h  TextManager.h  TextMetrics.h  TextUtils.h
lib/textAnalyzer/source/: TextAnalyzer.cpp  TextManager.cpp
unitTest/: CMakeLists.txt
unitTest/source/: test.cpp  textAnalyzerTest.cpp
